[project]
name = "django-graphene-jwt-oauth2"
version = "1.0.0"
#authors = [
#  { name="Example Author", email="author@example.com" },
#]
description = "An extension to django-graphene-jwt to allow oauth2 authentication to a Django app."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)""
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/AztlanEngineering/django-graphene-jwt-oauth2"
Issues = "https://github.com/AztlanEngineering/django-graphene-jwt-oauth2/issues"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True

[mypy-foo.bar.*]
disallow_untyped_defs = True

[mypy-foo.bar]
warn_return_any = False

[mypy-somelibrary]
ignore_missing_imports = True

[tool.pylint."MESSAGES CONTROL"]
disable = "C0330, C0326"

[tool.pylint.MASTER]
jobs = 0

