[project]
name = "django-graphql-jwt-oauth2"
version = "1.0.5"
#authors = [
#  { name="Example Author", email="author@example.com" },
#]
description = "An extension to django-graphene-jwt to allow oauth2 authentication to a Django app."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/AztlanEngineering/django-graphql-jwt-oauth2"
Issues = "https://github.com/AztlanEngineering/django-graphql-jwt-oauth2/issues"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [
  #"django",
  "graphql_jwt"
]

[[tool.mypy.overrides]]
module = "graphql_jwt"
ignore_errors = true
#disallow_untyped_defs = true

[tool.pylint."messages-control"]
max-args = 6
disable= [
  "too-few-public-methods",
  "f-string-without-interpolation" #Does not recognize the inteprolation
]


[tool.hatch]

[tool.hatch.build.targets.sdist]
packages = ["graphql_jwt_oauth2"]
exclude = [
  "/.github",
  "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["graphql_jwt_oauth2"]
exclude = [
  "/.github",
  "/docs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
